unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/xDO_Tool_TrackingEventJob__mdt.object-meta.xml
<CustomObject>
    <description>Tracking Event Jobs</description>
    <label>xDO Tool - Tracking Event Job</label>
    <pluralLabel>xDO Tool - Tracking Event Jobs</pluralLabel>
</CustomObject>