unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Queueable batch size between 1 and 99. Defaults to 50</description>
    <inlineHelpText>Queueable batch size between 1 and 99. Defaults to 50</inlineHelpText>
    <label>Batch Size</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>