unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>Class that extends from SDO_Tool_TrackingEventService.SDO_Tool_TrackingEventClient</description>
    <inlineHelpText>Class that extends from SDO_Tool_TrackingEventService.SDO_Tool_TrackingEventClient</inlineHelpText>
    <label>Client Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>