unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Entry_Stage__c.field-meta.xml
<CustomField>
    <fullName>Entry_Stage__c</fullName>
    <description>Entry criteria for the job&#39;s Tracking Event records to be processed</description>
    <inlineHelpText>Entry criteria for the job&#39;s Tracking Event records to be processed</inlineHelpText>
    <label>Entry Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Mixpanel Event</fullName>
            </value>
            <value>
                <fullName>Mixpanel Profile</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>