unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Exit_Stage__c.field-meta.xml
<CustomField>
    <fullName>Exit_Stage__c</fullName>
    <description>Exit stage for the job&#39;s Tracking Event records that are successfully processed</description>
    <inlineHelpText>Exit stage for the job&#39;s Tracking Event records that are successfully processed</inlineHelpText>
    <label>Exit Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixpanel Event</fullName>
                <default>true</default>
                <label>Mixpanel Event</label>
            </value>
            <value>
                <fullName>Mixpanel Profile</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>