unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Is_Schedulable__c.field-meta.xml
<CustomField>
    <fullName>Is_Schedulable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the job be scheduled?</description>
    <inlineHelpText>Should the job be scheduled?</inlineHelpText>
    <label>Is Schedulable?</label>
    <type>Checkbox</type>
</CustomField>