unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>The scheduled job name.</description>
    <inlineHelpText>The scheduled job name.</inlineHelpText>
    <label>Job Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>