unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Last_Notification_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Time__c</fullName>
    <label>Last Notification Time</label>
    <type>DateTime</type>
</CustomField>