unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Named Credential used by the Client</description>
    <inlineHelpText>Named Credential used by the Client</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>