unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>Notification_Emails__c</fullName>
    <label>Notification Emails</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>