unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>Unique identifier for a target system environment</description>
    <inlineHelpText>Unique identifier for a target system environment</inlineHelpText>
    <label>Project Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>