unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Friendly name identifier for a target system environment</description>
    <inlineHelpText>Friendly name identifier for a target system environment</inlineHelpText>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>