unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Project_Token__c.field-meta.xml
<CustomField>
    <fullName>Project_Token__c</fullName>
    <description>Target system Project Token</description>
    <label>Project Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>