unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Queueable_Type__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Type__c</fullName>
    <description>Class that extends from SDO_Tool_QueueableBase</description>
    <inlineHelpText>Class that extends from SDO_Tool_QueueableBase</inlineHelpText>
    <label>Queueable Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>