unpackaged/main/default/objects/xDO_Tool_TrackingEventJob__mdt/fields/Schedule_Interval__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Interval__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Job schedule interval in minutes. Recommended value is 5 and must be greater than 3</description>
    <inlineHelpText>Job schedule interval in minutes. Recommended value is 5 and must be greater than 3</inlineHelpText>
    <label>Schedule Interval</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>